# ImarisReader

./: pyproject.toml
python/: README.md
python/PyImarisReader/: PyImarisReader.py
