[project]
name = "pyImarisReader"
version = "0.1.0"
description = "Add your description here"
readme = "python/README.md"
requires-python = ">=3.11"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/pyImarisReader"]

[tool.hatch.build.targets.wheel.force-include]
"python/pyImarisReader/bin" = "pyImarisReader/bin"
