[project]
description = "PyImarisReader is a file reader for the Imaris5 file format ('.ims')."
name = "pyImarisReader"
version = "0.1.0"
readme = "python/README.md"
requires-python = ">=3.11"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/pyImarisReader"]

[tool.hatch.build.targets.wheel.force-include]
"python/pyImarisReader/bin" = "pyImarisReader/bin"
